fix: description misalignment

--- a/sites/public/styles/listings.scss
+++ b/sites/public/styles/listings.scss
@@ -150,4 +150,5 @@
 .column-definition-list {
   --body-font-size: var(--bloom-font-size-tiny);
   --last-row-grid: auto;
+  --title-font-size-desktop: var(--bloom-font-size-lg);
 }
